recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:4: error: ';' expected but ')' found.
		pentaKoch(levels-1,length*0,4))
                                              ^