recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
if (levels!=0) {
		pentaKoch(levels-1,length*0,4))
		left(108)
		pentaKoch(levels-1,length*0,4)
		right(72)
		pentaKoch(levels-1,length*0,4)
		right(72)
		pentaKoch(levels-1,length*0,4)
		right(72)
		pentaKoch(levels-1,length*0,4)
		left(108)
		pentaKoch(levels-1,length*0,4)
	}
	else {
		avance(length)
	}
}
